--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,165 +1,277 @@
 .pokemons {
-    display: grid;
-    grid-template-columns: 1fr;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.normal {
-    background-color: #a6a877;
-}
-
-.grass {
-    background-color: #77c850;
-}
-
-.fire {
-    background-color: #ee7f30;
-}
-
-.water {
-    background-color: #678fee;
-}
-
-.electric {
-    background-color: #f7cf2e;
-}
-
-.ice {
-    background-color: #98d5d7;
-}
-
-.ground {
-    background-color: #dfbf69;
-}
-
-.flying {
-    background-color: #a98ff0;
-}
-
-.poison {
-    background-color: #a040a0;
-}
-
-.fighting {
-    background-color: #bf3029;
-}
-
-.psychic {
-    background-color: #f65687;
-}
-
-.dark {
-    background-color: #725847;
-}
-
-.rock {
-    background-color: #b8a137;
-}
-
-.bug {
-    background-color: #a8b720;
-}
-
-.ghost {
-    background-color: #6e5896;
-}
-
-.steel {
-    background-color: #b9b7cf;
-}
-
-.dragon {
-    background-color: #6f38f6;
-}
-
-.fairy {
-    background-color: #f9aec7;
-}
-
-.pokemon {
-    display: flex;
-    flex-direction: column;
-    margin: .5rem;
-    padding: 1rem;
-    border-radius: 1rem;
-}
-
-.pokemon .number {
-    color: #000;
-    opacity: .3;
-    text-align: right;
-    font-size: .625rem;
-}
-
-.pokemon .name {
-    text-transform: capitalize;
-    color: #fff;
-    margin-bottom: .25rem;
-}
-
-.pokemon .detail {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.pokemon .detail .types {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
-.pokemon .detail .types .type {
-    color: #fff;
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    border-radius: 1rem;
-    filter: brightness(1.1);
-    text-align: center;
-}
-
-.pokemon .detail img {
-    max-width: 100%;
-    height: 70px;
-}
-
-.pagination {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 1rem;
-}
-
-.pagination button {
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    color: #fff;
-    background-color: #6c79db;
-    border: none;
-    border-radius: 1rem;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
 @media screen and (min-width: 380px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr;
-    }
+  .pokemons {
+    grid-template-columns: 1fr 1fr;
+  }
 }
-
 @media screen and (min-width: 576px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr;
-    }
+  .pokemons {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+@media screen and (min-width: 992px) {
+  .pokemons {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
 }
 
-@media screen and (min-width: 992px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
+.pokemon {
+  margin: 0.5rem;
+  padding: 2rem 1rem;
+
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.pokemon .name {
+  margin-bottom: 0;
+  font-size: 0.9rem;
+  text-transform: capitalize;
+}
+.pokemon .number {
+  color: rgb(0, 0, 0);
+  opacity: 0.2;
+  text-align: right;
+  font-size: 0.9rem;
+}
+.detalhes {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+}
+.pokemon .detail {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.pokemon .detail img {
+  border-style: none;
+  height: 80px;
+  align-self: flex-end;
+}
+.pokemon .types {
+  padding: 0 10px 0 0;
+  margin: 0;
+  list-style: none;
+}
+.pokemon .detail .types .type {
+  color: #fff;
+  padding: 0.25rem 0.5rem;
+  font-size: 0.625rem;
+  border-radius: 1rem;
+  margin: 0.25rem 0;
+  filter: brightness(1.08);
+}
+
+.normal {
+  color: white;
+  background-color: #a6a877;
+}
+.grass {
+  color: white;
+  background-color: #50c8be;
+  color: white;
+}
+.fire {
+  color: white;
+  background-color: #ee7f30;
+}
+.water {
+  color: white;
+  background-color: #678fee;
+}
+.electric {
+  background-color: #ddba30;
+  color: black !important;
+}
+.ice {
+  color: white;
+  background-color: #98d5d7;
+}
+.ground {
+  color: white;
+  background-color: #dfbf69;
+}
+.flying {
+  color: white;
+  background-color: #a98ff0;
+}
+.poison {
+  color: white;
+  background-color: #a040a0;
+}
+.fighting {
+  color: white;
+  background-color: #bf3029;
+}
+.psychic {
+  color: white;
+  background-color: #f65687;
+}
+.dark {
+  color: white;
+  background-color: #725847;
+}
+.rock {
+  color: white;
+  background-color: #b8a137;
+}
+.bug {
+  background-color: #a8b720;
+}
+.ghost {
+  color: white;
+  background-color: #6e5896;
+}
+.steel {
+  color: white;
+  background-color: #b9b7cf;
+}
+.dragon {
+  color: white;
+  background-color: #6f38f6;
+}
+.fairy {
+  color: white;
+  background-color: #f9aec7;
+}
+
+.pagination {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 1rem;
+}
+
+.pagination button {
+  background-color: #7b79db;
+  border: none;
+  border-radius: 1rem;
+  color: white;
+  padding: 0.25rem 0.5rem;
+  cursor: pointer;
+}
+
+.status ol li {
+  color: #7a7a7a;
+  padding-top: 0.5rem;
+  font-size: 14px;
+}
+.status {
+  width: 20%;
+}
+.status .estilo2 li {
+  color: #2e2e2e;
+  list-style: none;
+}
+.tipagem {
+  color: #fff;
+  padding: 0.25rem 0.5rem;
+  font-size: 0.625rem;
+  border-radius: 1rem;
+  margin: 0.25rem 0.3rem 0.25rem 0;
+  filter: brightness(1.08);
+  list-style: none;
+  max-width: 3rem;
+  filter: brightness(1.08);
+}
+
+.fundoSobre {
+  width: 100%;
+  height: 50%;
+  background-color: #fff;
+  margin-top: -3em;
+  border-radius: 1em;
+  padding: 2rem 0 0 0;
+}
+/*
+.baseCard {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}*/
+.baseCard {
+  justify-content: center;
+  display: flex;
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin-top: 5em;
+}
+.card {
+  width: 30em;
+  height: 35em;
+  border-radius: 1rem;
+}
+
+.divGeral {
+  width: 30em;
+  height: 20em;
+  border: 2px solid white;
+  margin-top: 10px;
+}
+
+.botaosair {
+  font-size: 30px;
+  font-weight: 800;
+}
+
+.cardNome {
+  font-size: 2rem;
+  text-transform: capitalize;
+}
+
+.popokemon {
+  box-shadow: 20px 20px 20px 20px #bbbbbb;
+}
+
+.divStatus {
+  display: flex;
+  justify-content: center;
+  color: black;
+}
+
+.barra {
+  width: 100%;
+  height: 5px;
+  border-radius: 10px;
+  background-color: rgb(187, 187, 187);
+  margin: 0.8rem 0 1.28rem;
+  font-size: 14px;
+}
+
+.barrinha {
+  height: 100%;
+  border-radius: 10px;
+  max-width: 100%;
+}
+
+.olBarra {
+  display: block;
+  list-style: none;
+  width: 50%;
+  padding-inline-start: 0;
 }
